MDEV-17573 Assertion in federatedx on multi-update

Cause: shared federatedx_io cannot store table-specific data.

Fix: move current row reference `federatedx_io_mysql::current` to
ha_federatedx.

Related to "MDEV-14551 Can't find record in table on multi-table update
with ORDER BY".